@@ -1,33 +1,0 @@
-package Phonebook::View::vCard;
-
-use strict;
-use warnings;
-use base 'Catalyst::View::TT';
-
-=head1 NAME
-
-Phonebook::View::vCard - Template Toolkit view component
-
-=head1 SYNOPSIS
-
-See L<Phonebook>.
-
-=head1 DESCRIPTION
-
-The Template Toolkit view component used by L<Phonebook> to produce
-vCards.
-
-=head1 AUTHOR
-
-University of Florida Web Administration E<lt>webmaster@ufl.eduE<gt>
-
-L<http://www.webadmin.ufl.edu/>
-
-=head1 LICENSE
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
-
-=cut
-
-1;
