@@ -40,6 +40,3 @@ Model::Person:
 View::TT:
   PRE_CHOMP: 1
   WRAPPER:   wrapper.tt
-
-View::vCard:
-  PRE_CHOMP: 1
