@@ -1,3 +1,4 @@
+[% META wrapper = 'wrappers/none.tt' -%]
 BEGIN:vCard
 VERSION:3.0
 FN:[% person.displayName %]
